--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsup --clean",
+    "ci": "npm run clean && npm run test:ci && npm run lint && npm run format:check && npm run build",
     "clean": "rm -rf dist",
-    "format": "prettier -w src",
-    "format:check": "prettier -c src",
+    "format": "prettier -w src test",
+    "format:check": "prettier -c src test",
     "lint": "tsc && npm run format:check",
-    "test": "tsx --test src/**/*.test.ts && npm run format"
+    "test": "tsx --test src/**/*.test.ts && npm run format",
+    "test:ci": "tsx --test src/**/*.test.ts"
   },
   "keywords": [
     "aws",
